20211103_dojo16/2_deny-all-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dojo16
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: dojo16
spec:
  podSelector: {}
  policyTypes:
  - Ingress
