20211103_dojo16/3_allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-alpine2nginx
  namespace: dojo16
spec:
  podSelector:
    matchLabels:
      app: ng
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: al
